Fixed bug not showing % of users answering correctly

--- a/src/app/user/game-screen/game-screen.component.scss
+++ b/src/app/user/game-screen/game-screen.component.scss
@@ -35,6 +35,18 @@
     width:150px;
 }
 
+.question_valuex{
+    text-align: center;
+    padding: 10px 25px;
+    font-family: 'orbitron-medium';
+    font-size: 1.2em;
+    color: white;
+    width: fit-content;
+    margin: 1.5% auto;
+    border-radius:0px;
+    background-color: transparent;
+}
+
 .pts100{
     font-size: 0.8em;
 }
